--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "cache-manager": "~0.18.x",
+    "request": "~2.53.x"
   },
   "devDependencies": {},
   "bundleDependencies": [],
